<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorTitle"
            android:layout_marginTop="100sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_account_button"
            android:background="@drawable/round_bg"
            android:layout_marginTop="100sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signin_button"
            android:background="@drawable/round_bg"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            />

        <Button
            android:id="@+id/btnSignInGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_google"
            android:background="@drawable/round_bg"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:drawableStart="@drawable/ic_google_logo"
            android:drawableLeft="@drawable/ic_google_logo"
            />

    </LinearLayout>
</RelativeLayout>